--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -2,8 +2,7 @@ name: Deploy frontend to GitHub Pages
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   workflow_dispatch:
 
 permissions:
@@ -12,12 +11,18 @@ permissions:
   id-token: write
 
 concurrency:
-  group: 'pages'
+  group: pages
   cancel-in-progress: true
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    # ✅ Make the vars available to ALL steps (including build/export)
+    env:
+      NEXT_PUBLIC_API_BASE_URL: ${{ vars.NEXT_PUBLIC_API_BASE_URL != '' && vars.NEXT_PUBLIC_API_BASE_URL || secrets.NEXT_PUBLIC_API_BASE_URL }}
+      NEXT_PUBLIC_WS_URL: ${{ vars.NEXT_PUBLIC_WS_URL != '' && vars.NEXT_PUBLIC_WS_URL || secrets.NEXT_PUBLIC_WS_URL }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -25,20 +30,27 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: 20
           cache: npm
           cache-dependency-path: frontend/package-lock.json
+
+      - name: Print env (debug)
+        run: |
+          echo "API=$NEXT_PUBLIC_API_BASE_URL"
+          echo "WS=$NEXT_PUBLIC_WS_URL"
+        working-directory: frontend
 
       - name: Install dependencies
         working-directory: frontend
         run: npm ci
 
+      # If you use Next.js + static export, ensure export runs
       - name: Build static site
         working-directory: frontend
-        run: npm run build
-        env:
-          NEXT_PUBLIC_API_BASE_URL: ${{ vars.NEXT_PUBLIC_API_BASE_URL || secrets.NEXT_PUBLIC_API_BASE_URL }}
-          NEXT_PUBLIC_WS_URL: ${{ vars.NEXT_PUBLIC_WS_URL || secrets.NEXT_PUBLIC_WS_URL }}
+        run: |
+          npm run build
+          # If your build script doesn't export, also do:
+          # npm run export
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
