--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/geojson": "^7946.0.10",
     "@types/node": "^20.11.30",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
