--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,15 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "adm-zip": "^0.5.16",
     "cors": "^2.8.5",
+    "csv-parse": "^6.1.0",
     "express": "^4.19.2",
+    "gtfs-realtime-bindings": "^1.1.1",
     "ws": "^8.16.0"
   },
   "devDependencies": {
+    "@types/adm-zip": "^0.5.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
