--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -1,25 +1,9 @@
-name: Deploy frontend to GitHub Pages
-
-on:
-  push:
-    branches: [ main ]
-  workflow_dispatch:
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: pages
-  cancel-in-progress: true
-
 jobs:
   build:
     runs-on: ubuntu-latest
 
-    # ✅ Make the vars available to ALL steps (including build/export)
     env:
+      # Prefer org/repo “Variables”; fall back to repo “Secrets”
       NEXT_PUBLIC_API_BASE_URL: ${{ vars.NEXT_PUBLIC_API_BASE_URL != '' && vars.NEXT_PUBLIC_API_BASE_URL || secrets.NEXT_PUBLIC_API_BASE_URL }}
       NEXT_PUBLIC_WS_URL: ${{ vars.NEXT_PUBLIC_WS_URL != '' && vars.NEXT_PUBLIC_WS_URL || secrets.NEXT_PUBLIC_WS_URL }}
 
@@ -31,8 +15,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
-          cache-dependency-path: frontend/package-lock.json
 
       - name: Print env (debug)
         run: |
@@ -44,26 +26,15 @@ jobs:
         working-directory: frontend
         run: npm ci
 
-      # If you use Next.js + static export, ensure export runs
       - name: Build static site
         working-directory: frontend
-        run: |
-          npm run build
-          # If your build script doesn't export, also do:
-          # npm run export
+        run: npm run build
+
+      - name: Export static site
+        working-directory: frontend
+        run: npx next export -o out
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: frontend/out
-
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
